--- a/projectEuler.cabal
+++ b/projectEuler.cabal
@@ -17,7 +17,7 @@ extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Primes, Triangle, Factorial, Divisors
+  exposed-modules:     Primes, Triangle, Factorial, Divisors, Pandigital
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.7 && <4.8, data-ordlist
